# fastapi-docker-exercise

./: .gitpod.yml  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: main.py
app/tests/: unit_test.py
