[tool.poetry]
name = "ml-model-deployment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.63.0"
pydantic = "^1.7.3"
python-multipart = "^0.0.5"
httpx = "^0.16.1"
aiofiles = "^0.6.0"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
requests = "^2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"